--- a/Html/index1.html
+++ b/Html/index1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="text-content" style="margin-bottom: 30px;">
+        <div class="text">
             <div class="text1">
                 <h2>Men's basketball shoes</h2>
             </div>
