--- a/Html/index1.html
+++ b/Html/index1.html
@@ -8,24 +8,20 @@
     <title>Flexbox1</title>
 </head>
 <body>
+    <div class="title">
+        <h1>Men's basketball shoes</h1>
+        <p>Showing 60 of 676 results</p>
+    </div>
     <div class="container">
-        <div class="text">
-            <div class="text1">
-                <h2>Men's basketball shoes</h2>
-            </div>
-            <div class="text2">Showing 60 of 676 results</div>
+        <div class="header">
+            <div class="header-item1"></div>
+            <div class="header-item2"></div>
         </div>
-        <div class="main">
-            <div class="top">
-                <div class="right-side"></div>
-                <div class="left-side"></div>
-            </div>
-            <div class="items">
-                <div class="item1"></div>
-                <div class="item2"></div>
-                <div class="item3"></div>
-                <div class="item4"></div>
-            </div>
+        <div class="list-card">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
         </div>
     </div>
 </body>
